--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: CabinetGrotesk;
+  src: url("./assets/fonts/CabinetGrotesk-Bold.otf") format("opentype");
+}
