--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
-  font-family: CabinetGrotesk;
-  src: url("./assets/fonts/CabinetGrotesk-Bold.otf") format("opentype");
-}
+
